--- a/tasks/JS Advanced/flags/package.json
+++ b/tasks/JS Advanced/flags/package.json
@@ -5,12 +5,16 @@
   "name": "tasks",
   "version": "1.0.0",
   "main": "tailwind.config.js",
-  
   "scripts": {
-    "build": "npx tailwindcss -i ./styles.css -o ./src/output.css --watch"
+    "start": "npx tailwindcss -i ./styles.css -o ./src/output.css --watch"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-scripts": "^5.0.1"
+  }
 }
