--- a/tasks/React/todo-task/package.json
+++ b/tasks/React/todo-task/package.json
@@ -16,7 +16,8 @@
     "json-server": "^1.0.0-beta.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "swr": "^2.2.5"
+    "swr": "^2.2.5",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
